Implemented Dark Theme

--- a/projects/fast-nu-course-grade-calculator/css/index-style.css
+++ b/projects/fast-nu-course-grade-calculator/css/index-style.css
@@ -3,10 +3,15 @@
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
+  color: #ecf0f1;
 }
 
 *:focus {
   outline: none;
+}
+
+body {
+  background-color: #2c3e50;
 }
 
 #grading {
@@ -24,12 +29,12 @@
 
 #cGrade, #cVal {
   background-color: #1abc9c;
-  color: #fff;
+  color: #ecf0f1;
 }
 
 #pGrade, #pVal {
   background-color: #000;
-  color: #fff;
+  color: #ecf0f1;
 }
 
 #mainContainer {
@@ -37,6 +42,16 @@
   margin: 0 auto;
   max-width: 600px;
   text-align: center;
+}
+
+#mainContainer h3 {
+  font-weight: lighter;
+  text-transform: uppercase;
+}
+
+#mainContainer h5 {
+  font-weight: lighter;
+  padding-top: 15px;
 }
 
 #mainContainer #fieldLabel {
@@ -60,6 +75,7 @@
   vertical-align: middle;
   display: inline-block;
   background-color: #ecf0f1;
+  color: #000;
   border-radius: 5px;
   -webkit-box-shadow: 2px 2px 10px -5px rgba(0, 0, 0, 0.3);
           box-shadow: 2px 2px 10px -5px rgba(0, 0, 0, 0.3);
@@ -86,6 +102,7 @@
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
   background-color: #f6e58d;
+  color: #34495e;
   transition: 0.2s ease-in-out;
   -webkit-box-shadow: 10px 10px 20px 3px rgba(0, 0, 0, 0.2);
           box-shadow: 10px 10px 20px 3px rgba(0, 0, 0, 0.2);
@@ -100,5 +117,13 @@
 
 #mainContainer #grading {
   line-height: 2;
+}
+
+#mainContainer #yt-player {
+  -webkit-box-shadow: 2px 2px 10px -5px rgba(0, 0, 0, 0.3);
+          box-shadow: 2px 2px 10px -5px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 /*# sourceMappingURL=index-style.css.map */
